--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.20",
+    "@fontsource/poppins": "^4.3.0",
     "@fontsource/source-sans-pro": "^5.0.8",
     "cra-template": "1.2.0",
     "framer-motion": "^10.17.9",
